--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -63,7 +63,7 @@
     <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance" class="table table-striped table-bordered">
     </table> -->
 
-    <table class="table"  datatable="ng" dt-options="dtOptions">
+    <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptions">
       <thead>
           <tr>
           <th scope="col"><p class="text-center">#</p></th>
