--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -479,11 +479,11 @@
 
       </div>
       <div class="modal-body">
-        <div class="col-12">
-          <button type="button" class="btn " ng-click="infoPsico = true" ><i class="fa fa-info"> <p>Requisitos para solicitud de psicotr&oacute;picos</p></button>
 
-        </div>
         <div id="card__infoicon">
+          <span>
+            <a class="nav-link" ng-click="infoPsico = true" ><i class="fa fa-info"> <p>Requisitos para solicitud de psicotr&oacute;picos</p> </i></a>
+          </span>
           <div class="alert alert-info alert-dismissible fade show" ng-show="infoPsico" role="alert">
             <div>
                 <p style='font-style: normal; font-weight: 400; text-align: start; text-indent: 0px;  margin: 0cm 0cm 0.0001pt 8px; font-size: 16px; font-family: "Times New Roman", serif; color: rgb(34, 34, 34);'><span style=" rgb(209, 236, 241);"><span style="color: rgb(0, 0, 0);"><span style="font-size: 13px; font-family: Symbol;">&middot;<span style='font-size:9px;line-height: normal;font-family: "Times New Roman";'>&nbsp; &nbsp; &nbsp; &nbsp;</span></span><strong><span style="font-size: 13px; font-family: Arial, sans-serif;">Enviar al siguiente correo <a href="mailto:regencia@del-oeste.com" style="color: rgb(17, 85, 204);" target="_blank">regencia@del-oeste.com</a>. :</span></strong></span></span></p>
