--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -697,8 +697,8 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancelModalDyn(context, contextId)" >Cerrar</button>
-        <button type="button" class="btn btn-danger" ng-click="cancelModalDyn(context, contextId)" data-dismiss="modal">Aceptar</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancelModalDyn()" >Cerrar</button>
+        <button type="button" class="btn btn-danger" ng-click="aceptModalDyn()" data-dismiss="modal">Aceptar</button>
       </div>
     </div>
   </div>
