--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -525,6 +525,7 @@
                       <tr>
                       <th scope="col"><p class="text-center">#</p></th>
                       <th scope="col"><p class="text-center">Nombre Producto</p></th>
+                      <th scope="col"><p class="text-center">Categoria</p></th>
                       <th scope="col"><p class="text-center">Existencia</p></th>
                       <th scope="col"><p class="text-center">Principio Activo</p></th>
                       <th scope="col"><p class="text-center">Precio Bs.S</p></th>
@@ -540,6 +541,7 @@
 
                           <td><p class="text-center">{{ $index + 1 }}</p></td>
                           <td><p class="text-center">{{ x.nombre_producto }}</p></td>
+                          <td><p class="text-center">{{ x.caregoria }}</p></td>
                           <td><p class="text-center">{{ x.existencia }}</p></td>
                           <td><p class="text-center">{{ x.princ_activo }}</p></td>
                           <td><p class="text-right">{{  x.precioFormatVE }}</p></td>
