--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -121,19 +121,20 @@
 
                 </div>
 
-                <div class="col-4">
-                  <label>Credito disponible Bs.S</label><br>
-                  <span >{{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</span>
+
+                <div class="col-3">
+                  <label>Monto minimo pedido Bs.S</label><br>
+                  <span >{{client.monto_minimo ? formato(2, client.monto_minimo):0)}}</span>
 
                 </div>
 
-                <div class="col-4">
+                <div class="col-3">
                   <label>Credito disponible USD</label><br>
                   <span >{{formato(3,(creditoClient.disp_usd_format)? (creditoClient.disp_usd_format - totales.UsdConIva):0)}}</span>
 
                 </div>
 
-                <div class="col-4">
+                <div class="col-3">
                   <label></label>
                   <button type="button" class="btn btn-info" ng-click="addPedidoV2()" ng-show="ID == null"  >Abrir Pedido</button>
                   <button type="button" class="btn btn-success"  ng-show="ID != null &&  counter < 600000" ng-click="openModalProducts()" >Agregar Productos</button>
