--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -124,7 +124,7 @@
 
                 <div class="col-3">
                   <label>Monto minimo pedido Bs.S</label><br>
-                  <span >{{client.monto_minimo ? formato(2, client.monto_minimo):0)}}</span>
+                  <span >{{client.monto_minimo ? formato(2, client.monto_minimo):0}}</span>
 
                 </div>
 
