--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -121,10 +121,17 @@
 
                 </div>
 
-
                 <div class="col-3">
                   <label>Monto minimo pedido Bs.S</label><br>
                   <span >{{client.monto_minimo ? formato(2, client.monto_minimo):0}}</span>
+                  {{client.monto_minimo}}
+
+                </div>
+
+
+                <div class="col-3">
+                  <label>Credito disponible Bs.S</label><br>
+                  <span >{{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</span>
 
                 </div>
 
