--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -117,9 +117,6 @@
 
               <div class="row mt-3 mb-5" >
 
-                <div class="col-12" ng-show="ID == null">
-
-                </div>
 
                 <div class="col-3">
                   <label>Monto minimo pedido Bs.S</label><br>
@@ -358,13 +355,19 @@
 
               <div class="row mt-5 mb-5" ng-show="editView" >
 
-                <div class="col-3">
+                <div class="col-2">
+                  <label>Monto minimo pedido Bs.S</label><br>
+                  <span >{{formato(2,client.monto_minimo)? formato(2, client.monto_minimo):0}}</span>
+
+                </div>
+
+                <div class="col-2">
                   <label>Credito disponible Bs.S</label><br>
                   <span >{{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</span>
 
                 </div>
 
-                <div class="col-3">
+                <div class="col-2">
                   <label>Credito disponible USD</label><br>
                   <span >{{formato(3,(creditoClient.disp_usd_format)? (creditoClient.disp_usd_format - totales.UsdConIva):0)}}</span>
 
@@ -379,6 +382,8 @@
                   <label></label>
                   <button type="button"  class="btn btn-success" ng-show="editView && pedido.estatus_id < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="finalizar_pedido()" data-dismiss="modal" >Finalizar pedido</button>
                 </div>
+
+
 
               </div>
 
