--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -145,7 +145,7 @@
 
                 <div class="col-3">
                   <label></label>
-                  <button type="button"  class="btn btn-success" data-dismiss="modal" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>                </div>
+                  <button type="button"  class="btn btn-success" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>                </div>
 
               </div>
 
@@ -715,7 +715,7 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancelModalDyn()" >Cerrar</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancelModalDyn()" >Cancelar</button>
         <button type="button" class="btn btn-danger" ng-click="aceptModalDyn()" data-dismiss="modal">Aceptar</button>
       </div>
     </div>
