--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -716,7 +716,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancelModalDyn()" >Cancelar</button>
-        <button type="button" class="btn btn-danger" ng-click="aceptModalDyn()" data-dismiss="modal">Aceptar</button>
+        <button type="button" class="btn btn-{{modalDynColor}}" ng-click="aceptModalDyn()" data-dismiss="modal">Aceptar</button>
       </div>
     </div>
   </div>
