--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -18,10 +18,11 @@
       <div class="col-md-6">
           <p class="font-weight-bold mb-4">Detalles</p>
           <p class="mb-1"><span class="text-muted">Codigo: </span> {{client_info.cod_cliente}}</p>
-          <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> N/A</p>
+          <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> {{client_info.tipo_venta}}</p>
           <p class="mb-1"><span class="text-muted">Plazo: </span> {{client_info.v_plazo}} dias</p>
-          <p class="mb-1"><span class="text-muted">Limite de Credito: </span> N/A</p>
+          <p class="mb-1"><span class="text-muted">Limite de Credito: </span> {{client_info.limite_credito}}</p>
           <p class="mb-1"><span class="text-muted">Limite disponible: </span> N/A</p>
+          <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Vendedor: </span> {{client_info.vendedor.toLowerCase()}}</p>
           <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Analista de cobranzas: </span> {{client_info.v_persona_cyc.toLowerCase()}}</p>
       </div>
   </div>
