--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -624,7 +624,10 @@
                 <label>Cantidad</label>
                 <input type="number"  min="1" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad" onkeypress='return event.charCode >= 48 && event.charCode <= 57' >
               </div>
-
+              <div class="col-6">
+                <label></label>
+                <button type="button" ng-disabled="productIndex==-1" class="btn btn-success"  ng-click="addArtPedido();">Agregar</button>
+              </div>
               <div class="row col-sm-12 col-md-12 col-lg-12">
                 <div class="col-sm-12 col-md-12 col-lg-12 mt-3 ">
 
@@ -659,7 +662,6 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-        <button type="button" ng-disabled="productIndex==-1" class="btn btn-success"  ng-click="addArtPedido();">Agregar</button>
       </div>
     </div>
   </div>
