--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -231,6 +231,7 @@
 
 
             </div>
+            </div>
 
           </form>
 
@@ -721,8 +722,6 @@
     </div>
   </div>
 </div>
-
-
 
 
 <div id="wrapper" class="active">
