--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -117,7 +117,7 @@
 
 
                 <div class="col-2">
-                  <label>Monto minimo pedido Bs.S</label><br>
+                  <label>Monto minimo pedido</label><br>
                   <span >{{formato(2,client.monto_minimo)? formato(2, client.monto_minimo):0}}</span>
 
                 </div>
@@ -144,12 +144,9 @@
                 <div class="col-3">
                   <label></label>
                   <button type="button"  class="btn btn-success" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>
-
+                </div>
               </div>
 
-              <div class="row mt-3 mb-5">
-
-              </div>
 
 
               <div class="form-group" >
@@ -230,7 +227,6 @@
                 </div>
 
 
-            </div>
             </div>
 
           </form>
