--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -8,7 +8,7 @@
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">CREAR PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
 
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" ng-click="reset();" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -249,7 +249,7 @@
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">VER PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
-        <button type="button" class="close" data-dismiss="modal"  aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" ng-click="reset();" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
         <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="reset();">Regresar</button> -->
