--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -20,7 +20,7 @@
           <p class="mb-1"><span class="text-muted">Codigo: </span> {{client_info.cod_cliente}}</p>
           <p class="mb-1"><span class="text-muted">Tipo de Venta: </span> {{client_info.tipo_venta}}</p>
           <p class="mb-1"><span class="text-muted">Plazo: </span> {{client_info.v_plazo}} dias</p>
-          <p class="mb-1"><span class="text-muted">Limite de Credito: </span> {{client_info.limite_credito}}</p>
+          <p class="mb-1"><span class="text-muted">Limite de Credito: </span> {{formato(2,client_info.limite_credito)}}</p>
           <p class="mb-1"><span class="text-muted">Limite disponible: </span> N/A</p>
           <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Vendedor: </span> {{client_info.vendedor.toLowerCase()}}</p>
           <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Analista de cobranzas: </span> {{client_info.v_persona_cyc.toLowerCase()}}</p>
