--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -554,14 +554,14 @@
 
                           <td><p class="text-center">{{ $index + 1 }}</p></td>
                           <td><p class="text-center">{{ x.nombre_producto }}</p></td>
-                          <td><p class="text-center">{{ x.caregoria }}</p></td>
+                          <td><p class="text-center">{{ x.categoria }}</p></td>
                           <td><p class="text-center">{{ x.existencia }}</p></td>
                           <td><p class="text-center">{{ x.princ_activo }}</p></td>
                           <td><p class="text-right">{{  x.precioFormatVE }}</p></td>
                           <td><p class="text-right">{{  x.iva_bs }}</p></td>
                           <td><p class="text-right">{{  x.precioFormatUSD }}</p></td>
                           <td><p class="text-right">{{  x.iva_usd }}</p></td>
-                          <td><p class="text-right">{{  x.proveedor }}</p></td>
+                          <td><p class="text-left">{{  x.proveedor }}</p></td>
 
                       </tr>
                       </a>
