--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -625,7 +625,10 @@
               </div>
               <div class="col-6">
                 <label>Acciones</label>
-                <button type="button" ng-disabled="productIndex==-1" class="btn btn-success"  ng-click="addArtPedido();">Agregar</button>
+                <div class="col-12">
+
+                  <button type="button" ng-disabled="productIndex==-1" class="btn btn-success" style="" ng-click="addArtPedido();">Agregar</button>
+                </div>
               </div>
               <div class="row col-sm-12 col-md-12 col-lg-12">
                 <div class="col-sm-12 col-md-12 col-lg-12 mt-3 ">
