--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -66,52 +66,7 @@
           <div class="col-md-12">
   		<table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
   			</table>
-            <!--<table id="deudas_table" class="table table-striped table-bordered" style="width:100%">
-              <thead>
-                <tr class="text-center">
-                  <th>Nombre de cliente</th>
-  				<th>Tipo de pago</th>
-                  <th>Fecha de vencimiento</th>
-                  <th>Monto inicial</th>
-                  <th>Monto pendiente</th>
-                  <th>Fecha de ultimo pago</th>
-                  <th>Monto de ultimo pago</th>
-                  <th>Estatus de deuda</th>
-  				<th></th>
-                </tr>
-              </thead>
-  			<tr class="text-center" ng-repeat="item in listDeuda">
-                <td>{{item.nombre_cliente}}</td>
-                <td>{{item.tipo_pago}}</td>
-                <td>{{item.fecha_vencimiento | date}}</td>
-                <td>{{item.monto_inicial | number}}</td>
-                <td>{{item.monto_pendiente | number}}</td>
-                <td>{{item.fecha_ultimo_pago | date}}</td>
-  			  <td>{{item.monto_ultimo_pago | number}}</td>
-  			  <td>{{item.estatus_deuda}}</td>
-                <td>
-                  <button type="button" class="btn btn-sm btn-primary p-0" name="button" ng-click="showDeuda(item);" title="Ver detalle de deuda" data-toggle="modal" data-target="#showDeudaModal"> <i class="fas fa-eye"></i> </button>
-                </td>
-              </tr>
-            </table>
-          </div>
-  		<nav aria-label="Page navigation example" style="margin: 0 auto;">
-            <ul class="pagination">
-              <li class="page-item" ng-click="page('prev')">
-                <a class="page-link" href="" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                  <span class="sr-only">Previous</span>
-                </a>
-              </li>
-              <li class="page-item" ng-repeat="item in getNumber(aux.totalPages) track by $index" ng-show="$index >= min && $index < max" style="color: #3966C7;"><a class="page-link" ng-click="getSaldo($index + 1)">{{$index + 1}}</a></li>
-              <li class="page-item" ng-click="page('next')">
-                <a class="page-link" href="" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </li>
-            </ul>
-          </nav>-->
+
         </div>
 
       </div>
@@ -123,10 +78,4 @@
 
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-    <div ng-include="'comps/common/footer.html'">
-
-    </div>
-  </div>
-</div>
+<my-footer></my-footer>
