--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -152,10 +152,4 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-    <div ng-include="'comps/common/footer.html'">
-
-    </div>
-  </div>
-</div>
+<my-footer></my-footer>
