--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -99,10 +99,4 @@
   </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-md-12">
-    <div ng-include="'comps/common/footer.html'">
-
-    </div>
-  </div>
-</div>
+<my-footer></my-footer>
