--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <script type="text/javascript" src="comps/login/login.js"></script>
   <script type="text/javascript" src="comps/sidebar/sidebar.js"></script>
+  <script type="text/javascript" src="comps/footer/footer.js"></script>
   <script type="text/javascript" src="comps/clientHeader/clientHeader.js"></script>
   <script type="text/javascript" src="comps/home/home.js"></script>
   <script type="text/javascript" src="comps/deuda/deuda.js"></script>
