--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="bower_components/ng-notify/dist/ng-notify.min.css">
+  <link rel="stylesheet" href="bower_components/angular-notify/dist/angular-notify.min.css">
+
   <link rel="stylesheet" type="text/css" href="bower_components/angular_datatables/css/angular-datatables.css"/>
   <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.1.0/css/responsive.dataTables.min.css">
@@ -63,6 +65,7 @@
   <script src="bower_components/angular-bind-html-compile/angular-bind-html-compile.js"></script>
 
   <script type="text/javascript" src="bower_components/ng-notify/dist/ng-notify.min.js"></script>
+  <script type="text/javascript" src="bower_components/angular-notify/dist/angular-notify.min.js"></script>
 
   <script src="bower_components/angular-socket-io/mock/socket-io.js"></script>
   <script src="bower_components/angular-socket-io/socket.min.js"></script>
