--- a/app/comps/home/home.html
+++ b/app/comps/home/home.html
@@ -2,7 +2,7 @@
 
 </div>
 
-<div id="wrapper" class="active">
+<div id="wrapper" class="">
 
   <my-sidebar></my-sidebar>
   <div  id="page-content-wrapper" class="container-fluid">
@@ -12,12 +12,6 @@
         <br>
         <h5 class="text-center"> <strong>HOME</strong> </h5>
         <h2 class="text-center"> <strong>{{client_info.nombre_cliente}}</strong> </h2>
-        <!-- <div ng-include="'comps/common/breadcrumb.html'">
-
-        </div> -->
-        <!-- <h5 class="text-center">¡Bienvenido nuevamente, Usuario Administrador!</h5> -->
-
-        <!-- EDICION PRINCIPAL DE LA VISTA -->
 
         <div class="container-fluid">
           <div class="row">
