--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -48,7 +48,7 @@
 </div>
 </div>
 
-<div id="wrapper" class="active">
+<div id="wrapper" class="">
 
   <my-sidebar></my-sidebar>
 <div  id="page-content-wrapper" class="container-fluid">
