--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -725,7 +725,7 @@
   </div>
 </div>
 
-<div id="wrapper" class="active">
+<div id="wrapper" class="">
 
   <my-sidebar></my-sidebar>
   <div id="page-content-wrapper" class="container-fluid">
