--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -3,7 +3,7 @@
 </div>
 
 
-<div id="wrapper" class="active">
+<div id="wrapper" class="">
   <my-sidebar></my-sidebar>
   <div id="page-content-wrapper"  class="container-fluid">
     <div class="row" style="min-height:80vh">
