--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<div id="sidebar-wrapper">
+<!-- <div id="sidebar-wrapper">
 <ul id="sidebar_menu" class="sidebar-nav">
      <li class="sidebar-brand" ng-show="!side"  ><a id="menu-toggle" ng-click="showSidebar()" >Menu<i class="main_icon fas fa-bars" style="text-align:center"></i></a></li>
      <li class="sidebar-brand" ng-show="side"  ><a id="menu-toggle" ng-click="hideSidebar()" >Menu<i class="main_icon fas fa-bars" style="text-align:center"></i></a></li>
@@ -16,18 +16,6 @@
         <i class="sub_icon fas fa-receipt" style="text-align:center"></i>
       </a>
     </li>
-    <!-- <li class="nav-item" ng-show="user.role == 'admin'" >
-      <a href="#!/generar" class="">
-        Generar
-        <i class="sub_icon fas fa-shopping-basket" style="text-align:center"></i>
-      </a>
-    </li>
-    <li class="nav-item" ng-show="user.role == 'admin'"  >
-      <a href="#!/consulta" class="">
-        Consultar
-        <i class="sub_icon fas fa-list-alt" style="text-align:center"></i>
-      </a>
-    </li>-->
     <li class="nav-item" ng-show="user.role == 'admin'"  >
       <a href="#!/usuarios" class="">
         Usuarios
@@ -57,13 +45,6 @@
         Facturas
         <i class="sub_icon fas fa-list-alt" style="text-align:center"></i>
       </a>
-    </li>
-    <!-- <li class="nav-item"  ng-show="user.role == 'admin'"  >
-      <a href="#!/config" class="">
-        Config
-        <i class="sub_icon fas fa-cog" style="text-align:center"></i>
-      </a>
-    </li> -->
     <li class="nav-item" >
       <a href="/ddo" class="">
         Salir
@@ -71,4 +52,95 @@
       </a>
     </li>
   </ul>
-</div>
+</div> -->
+
+<div class="overlay" id="myOverlay" ></div>
+
+<!-- Sidebar -->
+<nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+    <ul class="nav sidebar-nav">
+        <li class="sidebar-brand">
+            <a href="#">
+               Menu
+            </a>
+        </li>
+        <li>
+            <a href="#!/home"><i class="fa fa-fw fa-home"></i> Home</a>
+        </li>
+        <li>
+          <a href="#!/deuda" class=""><i class="fa fa-fw  fas fa-receipt" ></i>Deuda</a>
+        </li>
+        <li ng-show="user.role == 'admin'"  >
+          <a href="#!/usuarios" class="">
+            <i class="fa fa-fw fas fa-user" ></i>
+            Usuarios
+          </a>
+        </li>
+        <li  ng-show="user.role == 'admin'"  >
+          <a href="#!/clientes" class="">
+            <i class=" fa fa-fw fas fa-user" ></i>
+            Clientes
+          </a>
+        </li>
+        <li>
+          <a  href="#!/saldo" class="">
+            <i class=" fa fa-fw fas fa-list-alt" ></i>
+          Productos
+        </a>
+      </li>
+      <li >
+        <a href="#!/pedidos" class="">
+          <i class=" fa fa-fw fas fa-list-alt" ></i>
+          Pedidos
+        </a>
+      </li>
+      <li >
+        <a href="#!/facturado" class="">
+          <i class=" fa fa-fw fas fa-list-alt" ></i>
+          Facturas
+        </a>
+      <li >
+        <a href="/ddo" class="">
+          <i class=" fa fa-fw  fa-times" ></i>
+          Salir
+        </a>
+      </li>
+
+<!--
+        <li>
+            <a href="#"><i class="fa fa-fw fa-folder"></i> Page one</a>
+        </li>
+        <li>
+            <a href="#"><i class="fa fa-fw fa-file-o"></i> Second page</a>
+        </li>
+        <li>
+            <a href="#"><i class="fa fa-fw fa-cog"></i> Third page</a>
+        </li>
+        <li class="dropdown">
+          <a  class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li class="dropdown-header">Dropdown heading</li>
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Separated link</a></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+        <li>
+            <a href="#"><i class="fa fa-fw fa-bank"></i> Page four</a>
+        </li>
+        <li>
+            <a href="#"><i class="fa fa-fw fa-dropbox"></i> Page 5</a>
+        </li>
+        <li>
+            <a href="#"><i class="fa fa-fw fa-twitter"></i> Last page</a>
+        </li>
+    </ul> -->
+</nav>
+
+<button type="button" class="hamburger is-closed animated fadeInLeft" ng-click="hamburger_cross()" data-toggle="offcanvas">
+  <span class="hamb-top"></span>
+  <span class="hamb-middle"></span>
+  <span class="hamb-bottom"></span>
+</button>
