--- a/app/index.html
+++ b/app/index.html
@@ -107,29 +107,29 @@
   <script src="comps/version/interpolate-filter.js"></script>
 
   <script type="text/javascript">
-    navigator.serviceWorker.register('service-worker.js', {
-        scope: ''
-      })
-      .then(function(registration) {
-        var serviceWorker;
-        if (registration.installing) {
-          serviceWorker = registration.installing;
-        } else if (registration.waiting) {
-          serviceWorker = registration.waiting;
-        } else if (registration.active) {
-          serviceWorker = registration.active;
-        }
-
-        if (serviceWorker) {
-          console.log("ServiceWorker phase:", serviceWorker.state);
-
-          serviceWorker.addEventListener('statechange', function(e) {
-            console.log("ServiceWorker phase:", e.target.state);
-          });
-        }
-      }).catch(function(err) {
-        console.log('ServiceWorker registration failed: ', err);
-      });
+    // navigator.serviceWorker.register('service-worker.js', {
+    //     scope: ''
+    //   })
+    //   .then(function(registration) {
+    //     var serviceWorker;
+    //     if (registration.installing) {
+    //       serviceWorker = registration.installing;
+    //     } else if (registration.waiting) {
+    //       serviceWorker = registration.waiting;
+    //     } else if (registration.active) {
+    //       serviceWorker = registration.active;
+    //     }
+    //
+    //     if (serviceWorker) {
+    //       console.log("ServiceWorker phase:", serviceWorker.state);
+    //
+    //       serviceWorker.addEventListener('statechange', function(e) {
+    //         console.log("ServiceWorker phase:", e.target.state);
+    //       });
+    //     }
+    //   }).catch(function(err) {
+    //     console.log('ServiceWorker registration failed: ', err);
+    //   });
   </script>
 </body>
 
